fixed some responsive design issues with mobile, extra padding

--- a/styles/main.css
+++ b/styles/main.css
@@ -22,13 +22,10 @@ body {
 
 }
 
-
 .about-node {
-  max-width: 500px;
   letter-spacing: 1.2px;
   line-height: 1.2em;
   font-family: 'Barlow Condensed', sans-serif;
-
 }
 
 .title-node {
